# subleq3

./: .gitignore  6502-instructions.md  README.md  ascii.txt  hello.py  program.npy  program.s  program.sub  pyproject.toml  stdintest.py  subleq.lark
subleq/: compile.py  const.py  gen_grammar.py  run.py  subleq.py
