[project]
name = "subleq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["lark>=1.2.2", "numpy>=2.3.1", "rich>=14.0.0"]

[project.scripts]
compile = "subleq.compile:main"
run = "subleq.run:main"
gen_grammar = "subleq.gen_grammar:main"
